--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <div class="container=fluid">
-    <div id="cityWell" class="well">
+    <div id="city">
     <h1 id="city" class="text-center"></h1>
     </div>
     
